# python-app-template

./: pyproject.toml
project_name/: main.py
tests/: test_imports.py
